# Rob_Issues

./: README.md
sortabot_ws/src/sortabot/: generate_world.py  package.xml  setup.py
sortabot_ws/src/sortabot/launch/: sortabot.launch.py  spawn_robots.launch.py
sortabot_ws/src/sortabot/models/: childabot.sdf  dumbbell.urdf.xacro  sortabot.sdf
sortabot_ws/src/sortabot/sortabot/: childabot.py  convert_urdf.py  robot_controller.py  world_manager.py
sortabot_ws/src/sortabot/urdf/: dumbbell.urdf.xacro
sortabot_ws/src/sortabot/worlds/: sortabot.world
src/sortabot/: package.xml  setup.cfg  setup.py
src/sortabot/launch/: sortabot.launch.py
src/sortabot/models/bin_blue/: model.xml
src/sortabot/models/bin_green/: model.xml
src/sortabot/models/bin_red/: model.xml
src/sortabot/models/bin_yellow/: model.xml
src/sortabot/models/childabot/: model.xml
src/sortabot/models/object_blue/: model.xml
src/sortabot/models/object_green/: model.xml
src/sortabot/models/object_red/: model.xml
src/sortabot/models/object_yellow/: model.xml
src/sortabot/models/obstacle_wall/: model.xml
src/sortabot/models/robot/: model.xml
src/sortabot/resource/: sortabot
src/sortabot/sortabot/: childabot.py  generate_world.py  keyboard_reset.py  robot_controller.py  world_manager.py
src/sortabot/worlds/: sortabot_base.world
