<?xml version="1.0"?>
<package format="3">
  <name>sortabot</name>
  <version>0.0.0</version>
  <description>Sortabot procedural world generator and controllers</description>
  <maintainer email="benjamin@todo.todo">benjamin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gazebo_msgs</depend>
  
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
